--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -114,7 +114,7 @@ directions = "Enter I-REF Building and take the elevators to the 2nd Floor. Talk
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
 #  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-#  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:n.umetani?call"},
+{icon = "skype", icon_pack = "fab", name = "Talk on Skype (Skype ID: n.umetani)", link = "skype:n.umetani?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
 # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
