--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = "https://cgenglab.github.io/labpage"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy Nobuyuki Umetani {year}"
+copyright = "&copy; Nobuyuki Umetani {year}"
 
 # added by me 
 publishDir = "docs"
